--- a/src/css_files/home.css
+++ b/src/css_files/home.css
@@ -1,79 +1,81 @@
-/* עיצוב כללי לעמוד
-.home-container {
-    font-family: Arial, sans-serif;
-    padding: 20px;
-    background-color: #f4f4f4;
-    min-height: 100vh;
-  }
-  
+
   /* כותרת העמוד */
-  .home-header {
-    text-align: center;
-    margin-bottom: 40px;
-  }
-  
-  .home-header h1 {
-    font-size: 2.5rem;
-    color: #333;
-    margin: 0;
-  }
-  
-  /* סגנון לתפריט הניווט */
-  .nav-bar {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-bottom: 30px;
-  }
-  
-  .nav-bar a {
-    text-decoration: none;
-    font-size: 1.2rem;
-    color: #fff;
-    background-color: #007bff;
-    padding: 10px 20px;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-  }
-  
-  .nav-bar a:hover {
-    background-color: #0056b3;
-  }
-  
-  /* סגנון לתוכן הכללי */
-  /* .home-content {
+.home-header {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.home-header h1 {
+  font-size: 2.5rem;
+  color: #333;
+  margin: 0;
+}
+
+/* סגנון לתפריט הניווט */
+.nav-bar {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.nav-bar a {
+  text-decoration: none;
+  font-size: 1.2rem;
+  color: #fff;
+  background-color: #006ee3;
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.nav-bar a:hover {
+  background-color: #b3003c;
+}
+
+/* סגנון לתוכן הכללי */
+/* .home-content {
     text-align: center;
     font-size: 1.1rem;
     color: #555;
     max-width: 800px;
     margin: 0 auto;
   } */
-  
-  .home-content  {
-    line-height: 1.6;
-    width: 100%;
-    background-color: #9b1111e3;
-    height: 30px;
-    min-height:30vh;
-  }
-  
-  /* הגדרת כפתור ליציאה */
-  .logout-button {
-    display: block;
-    text-align: center;
-    margin-top: 30px;
-  }
-  
-  .logout-button a {
-    text-decoration: none;
-    color: white;
-    background-color: #dc3545;
-    padding: 10px 20px;
-    border-radius: 5px;
-    font-size: 1.1rem;
-  }
-  
-  .logout-button a:hover {
-    background-color: #c82333;
-  }
- 
+
+.home-content {
+  line-height: 1.6;
+  width: 100%;
+  background-color: #000000c2;
+  height: huto;
+  min-height: 75vh;
+}
+
+/* הגדרת כפתור ליציאה */
+.logout-button {
+  display: block;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.logout-button a {
+  text-decoration: none;
+  color: white;
+  background-color: #dc3545;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 1.1rem;
+}
+
+.logout-button a:hover {
+  background-color: #c82333;
+}
+
+button {
+  background-color: #b3003c;
+}
+
+h1 {
+  background-color: #b3003c;
+  font-size: 50px;
+
+}
